force-app/main/default/objects/Campaign_Query__c/Campaign_Query__c.object-meta.xml
<CustomObject>
    <label>Campaign Query</label>
    <nameField>
        <label>Campaign Query Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Query</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>