force-app/main/default/objects/Campaign_Query__c/fields/Call_Generated_Field__c.field-meta.xml
<CustomField>
    <fullName>Call_Generated_Field__c</fullName>
    <label>Call Generated Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>