force-app/main/default/objects/Campaign_Query__c/fields/Campaign_Phase__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Phase__c</fullName>
    <label>Campaign Phase</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>