force-app/main/default/objects/Campaign_Query__c/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <label>Campaign Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>