force-app/main/default/objects/Campaign_Query__c/fields/Current_Milk_Field__c.field-meta.xml
<CustomField>
    <fullName>Current_Milk_Field__c</fullName>
    <inlineHelpText>Update current milk to this field</inlineHelpText>
    <label>Current Milk Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>