force-app/main/default/objects/Campaign_Query__c/fields/isactive__c.field-meta.xml
<CustomField>
    <fullName>isactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active ?</label>
    <type>Checkbox</type>
</CustomField>