force-app/main/default/objects/Campaign_Query__c/fields/Last_Call_Generated_Field__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Generated_Field__c</fullName>
    <label>Last Call Generated Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>