force-app/main/default/objects/Campaign_Query__c/fields/Last_Status_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Date_Field__c</fullName>
    <label>Last Status Date Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>