force-app/main/default/objects/Campaign_Query__c/fields/Next_Eligible_Mailer__c.field-meta.xml
<CustomField>
    <fullName>Next_Eligible_Mailer__c</fullName>
    <label>Next Eligible Mailer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st Mailer</fullName>
            </value>
            <value>
                <fullName>2nd Mailer</fullName>
            </value>
            <value>
                <fullName>3rd Mailer</fullName>
            </value>
            <value>
                <fullName>Stage 2 Package</fullName>
            </value>
            <value>
                <fullName>1st Mailer Stage 2</fullName>
            </value>
            <value>
                <fullName>2nd Mailer Stage 2</fullName>
            </value>
            <value>
                <fullName>3rd Mailer Stage 2</fullName>
            </value>
            <value>
                <fullName>4th Mailer Stage 2</fullName>
            </value>
            <value>
                <fullName>End</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>