force-app/main/default/objects/Campaign_Query__c/fields/No__c.field-meta.xml
<CustomField>
    <fullName>No__c</fullName>
    <label>No #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>