force-app/main/default/objects/Campaign_Query__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <inlineHelpText>Query from ?</inlineHelpText>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>