force-app/main/default/objects/Campaign_Query__c/fields/Prev_Milk_Field__c.field-meta.xml
<CustomField>
    <fullName>Prev_Milk_Field__c</fullName>
    <label>Prev Milk Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>