force-app/main/default/objects/Campaign_Query__c/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <inlineHelpText>Child__c.Connected_Date_Validation__c &lt;= #{&quot;m&quot;:-2,&quot;d&quot;:-15}#</inlineHelpText>
    <label>Query</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>