force-app/main/default/objects/Campaign_Query__c/fields/Trigger_Checking__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Checking__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Trigger Checking?</label>
    <type>Checkbox</type>
</CustomField>