force-app/main/default/objects/Campaign_Query__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Call_Generated_Field__c</columns>
    <columns>Campaign_Type__c</columns>
    <columns>Campaign_Phase__c</columns>
    <columns>Query__c</columns>
    <columns>isactive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>